--- a/index.html
+++ b/index.html
@@ -27,20 +27,17 @@
 				</div>
 			</nav>
 		</header>
-		
 		<main>
 			<section class="about-us">
 				<h1>Magguru</h1>
-				<p>Website yang bertujuan mem-presentasi wadah pelatihan IT di tanah air.</p>
+				<p>Mem-presentasi wadah pelatihan IT di tanah air.</p>
 			</section>
 			<section class="article" id="article">
 			</section>
 		</main>
-		
 		<footer>
 			<p><span>Magguru</span> Copyright 2022</p>
 		</footer>
-
 		<script src="./script.js"></script>
 	</body>
 </html>
