--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</section>
 		</main>
 		<footer>
-			<p><span>Magguru</span> Copyright 2022</p>
+			<p>&copy; 2022 <span>magguru</span></p>
 		</footer>
 		<script src="./script.js"></script>
 	</body>
