--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</div>
 			<nav>
 				<div class="info" id="showInfo">
-					<i><img src="./assets/icon/circle-info-icon.svg" alt=""></i>
+					<i><img src="./assets/icon/circle-info-icon.svg" alt="Info Icon"></i>
 				</div>
 				<div class="profiles info-profiles" id="infoProfiles">
 					<a href="https://github.com/muhahsanarifin/"><img src="./assets/icon/github-icon.svg" alt="Github"></a>
@@ -30,13 +30,13 @@
 		<main>
 			<section class="about-us">
 				<h1>Magguru</h1>
-				<p>Mem-presentasi wadah pelatihan IT di tanah air.</p>
+				<p>Mem-presentasi wadah pelatihan IT di tanah air <span>INDONESIA</span>.</p>
 			</section>
 			<section class="article" id="article">
 			</section>
 		</main>
 		<footer>
-			<p>&copy; 2022 <span>magguru</span></p>
+			<p class="footer">&copy; 2022 <span>magguru</span></p>
 		</footer>
 		<script src="./script.js"></script>
 	</body>
