--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="info" id="showInfo">
 					<i><img src="./assets/icon/circle-info-icon.svg" alt="Info Icon"></i>
 				</div>
-				<div class="profiles info-profiles" id="infoProfiles">
+				<div class="profiles" id="infoProfiles">
 					<a href="https://github.com/muhahsanarifin/"><img src="./assets/icon/github-icon.svg" alt="Github"></a>
 					<a href="https://www.instagram.com/muh.ahsan.a/"><img src="./assets/icon/instagram-icon.svg" alt="Instagram"></a>
 					<a href="https://www.linkedin.com/in/muhahsan/"><img src="./assets/icon/linkedin-icon.svg" alt="LinkedIn"></a>
