--- a/index.html
+++ b/index.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="author" content="MUH. AHSAN">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="author" content="MUH. AHSAN">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<link rel="icon" type="image/x-icon" href="./assets/icon/magguru.ico">
-		
-		<link rel="stylesheet" href="./style.css">
-		<title>Magguru</title>
-	</head>
-	<body>	
-		<header>
-			<div class="logo">
-				<img src="./assets/logo/magguru-logo.png" alt="Magguru">
-			</div>
-			<nav>
-				<div class="info" id="showInfo">
-					<i><img src="./assets/icon/circle-info-icon.svg" alt="Info Icon"></i>
-				</div>
-				<div class="profiles" id="infoProfiles">
-					<a href="https://github.com/muhahsanarifin/"><img src="./assets/icon/github-icon.svg" alt="Github"></a>
-					<a href="https://www.instagram.com/muh.ahsan.a/"><img src="./assets/icon/instagram-icon.svg" alt="Instagram"></a>
-					<a href="https://www.linkedin.com/in/muhahsan/"><img src="./assets/icon/linkedin-icon.svg" alt="LinkedIn"></a>
-				</div>
-			</nav>
-		</header>
-		<main>
-			<section class="about-us">
-				<h1>Magguru</h1>
-				<p>Mem-presentasi wadah pelatihan IT di tanah air <span>INDONESIA</span>.</p>
-			</section>
-			<section class="article" id="article">
-			</section>
-		</main>
-		<footer>
-			<p class="footer">&copy; 2022 <span>magguru</span></p>
-		</footer>
-		<script src="./script.js"></script>
-	</body>
+    <link rel="icon" type="image/x-icon" href="./assets/icon/magguru.ico">
+    
+    <link rel="stylesheet" href="./style.css">
+    <title>Magguru</title>
+  </head>
+  <body>	
+    <header>
+      <div class="logo">
+        <img src="./assets/logo/magguru-logo.png" alt="Magguru">
+      </div>
+      <nav class=".nav">
+        <div class="info" id="showInfo">
+          <i><img src="./assets/icon/circle-info-icon.svg" alt="Info Icon"></i>
+        </div>
+        <div class="profiles" id="infoProfiles">
+          <a href="https://github.com/muhahsanarifin/"><img src="./assets/icon/github-icon.svg" alt="Github"></a>
+          <a href="https://www.instagram.com/muh.ahsan.a/"><img src="./assets/icon/instagram-icon.svg" alt="Instagram"></a>
+          <a href="https://www.linkedin.com/in/muhahsan/"><img src="./assets/icon/linkedin-icon.svg" alt="LinkedIn"></a>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section class="about-us">
+        <h1>Magguru</h1>
+        <p>Mem-presentasi wadah pelatihan IT di tanah air <span>INDONESIA</span>.</p>
+      </section>
+      <section class="article" id="article">
+      </section>
+    </main>
+    <footer>
+      <p class="footer">&copy; 2022 <span>magguru</span></p>
+    </footer>
+    <script src="./script.js"></script>
+  </body>
 </html>
